--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,6 +10,11 @@
   display: none;
 }
 
-#wall div#tag-4 {
+#wall > div#tag-4 {
   display: none;
 }
+
+/*#wall div#tag-3.slick.wicked {
+  display: none;
+}
+*/
