--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,9 +10,9 @@
   display: none;
 }
 
-#wall div#tag-4 {
+/*#wall div#tag-4 {
   display: none;
-}
+}*/
 
 div#wall .parent #tag-5.slick {
   display: none;
