--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,10 +14,10 @@
   display: none;
 }
 
-#wall div #tag-5.slick {
+div#wall div.parent #tag-5.slick {
   display: none;
 }
 
-div#wall div.parent #tag-5.slick {
+div#wall div.parent + .parent#tag-6 {
   display: none;
 }
