--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,6 +18,6 @@ div#wall div.parent #tag-5.slick {
   display: none;
 }
 
-div#wall .parent  div#tag-6 {
+#wall .parent  div#tag-6 {
   display: none;
 }
