--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -23,5 +23,5 @@ body div#wall div.parent div:last-child div#tag-6 {
 }
 
 body div#wall div.parent div:first-child > #tag-7.slick {
-  display: block;
+  display: none;
 }
